--- a/waybar/style.css
+++ b/waybar/style.css
@@ -4,11 +4,12 @@
 }
 
 window#waybar {
-    background-color: rgba(43, 48, 59, 0.5);
+    /*background-color: rgba(43, 48, 59, 0.5);
     border-bottom: 3px solid rgba(100, 114, 125, 0.5);
     color: #ffffff;
     transition-property: background-color;
-    transition-duration: .5s;
+    transition-duration: .5s;*/
+background: transparent;
 }
 
 window#waybar.hidden {
@@ -113,12 +114,52 @@ button:hover {
 }
 
 #clock {
-    background-color: #64727D;
+	background-color: #64727D;
+	margin-top: 6px;
+	margin-left: 8px;
+	padding-left: 10px;
+	padding-right: 10px;
+	margin-bottom: 0px;
+	border-radius: 10px;
+	transition: none;
+	color: #161320;
 }
 
+#backlight {
+	margin-top: 6px;
+	margin-left: 8px;
+	padding-left: 10px;
+	padding-right: 10px;
+	margin-bottom: 0px;
+	border-radius: 10px;
+	transition: none;
+	color: #161320;
+	background: #F8BD96;
+}
+
+#pulseaudio{
+	margin-top: 6px;
+	margin-left: 8px;
+	padding-left: 10px;
+	padding-right: 10px;
+	margin-bottom: 0px;
+	border-radius: 10px;
+	transition: none;
+	color: #000000;
+	background-color: #f1c40f;
+}
+
+
 #battery {
-    background-color: #ffffff;
-    color: #000000;
+   background-color: #B5E8E0;
+   color: #161320;
+   margin-top: 6px;
+   margin-left: 8px;
+   padding-left: 10px;
+   padding-right: 10px;
+   margin-bottom: 0px;
+   border-radius: 10px;
+   transition: none;
 }
 
 #battery.charging, #battery.plugged {
@@ -170,10 +211,24 @@ label:focus {
 #cpu {
     background-color: #2ecc71;
     color: #000000;
+margin-top: 6px;
+	margin-left: 8px;
+	padding-left: 10px;
+	margin-bottom: 0px;
+	padding-right: 10px;
+	border-radius: 10px;
+	transition: none;
 }
 
 #memory {
     background-color: #9b59b6;
+margin-top: 6px;
+	margin-left: 8px;
+	padding-left: 10px;
+	margin-bottom: 0px;
+	padding-right: 10px;
+	border-radius: 10px;
+	transition: none;
 }
 
 #disk {
@@ -185,16 +240,19 @@ label:focus {
 }
 
 #network {
+margin-top: 6px;
+	margin-left: 8px;
+	padding-left: 10px;
+	padding-right: 18px;
+	margin-bottom: 0px;
+	border-radius: 10px;
+	transition: none;
+	color: #161320;
     background-color: #2980b9;
 }
 
 #network.disconnected {
     background-color: #f53c3c;
-}
-
-#pulseaudio {
-    background-color: #f1c40f;
-    color: #000000;
 }
 
 #pulseaudio.muted {
@@ -227,6 +285,13 @@ label:focus {
 
 #temperature {
     background-color: #f0932b;
+margin-top: 6px;
+	margin-left: 8px;
+	padding-left: 10px;
+	margin-bottom: 0px;
+	padding-right: 10px;
+	border-radius: 10px;
+	transition: none;
 }
 
 #temperature.critical {
@@ -234,7 +299,16 @@ label:focus {
 }
 
 #tray {
-    background-color: #2980b9;
+margin-top: 6px;
+	margin-left: 8px;
+	padding-left: 10px;
+	margin-bottom: 0px;
+	padding-right: 10px;
+	border-radius: 10px;
+	transition: none;
+	color: #B5E8E0;
+
+    background-color: #000000;
 }
 
 #tray > .passive {
@@ -247,6 +321,13 @@ label:focus {
 }
 
 #idle_inhibitor {
+margin-top: 6px;
+	margin-left: 8px;
+	padding-left: 10px;
+	margin-bottom: 0px;
+	padding-right: 10px;
+	border-radius: 10px;
+	transition: none;
     background-color: #2d3436;
 }
 
